# score-board-back

./: Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini
config/: settings.py  urls.py
score_board/game/: admin.py  apps.py  views.py
score_board/game/migrations/: 0001_initial.py  0002_alter_mechanic_name.py
score_board/game/models/: __init__.py  category.py  game.py  mechanic.py
score_board/game_session/: admin.py  apps.py
score_board/game_session/migrations/: 0001_initial.py  0002_initial.py  0003_result.py
score_board/game_session/models/: __init__.py  game_session.py  player.py  result.py
score_board/user/: admin.py  apps.py  models.py  services.py  urls.py
score_board/user/migrations/: 0001_initial.py
score_board/user/serializers/: user.py
score_board/user/views/: authentification.py
tests/: settings.py
tests/user/services/: test_log_user_in.py
